<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjoutArticleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/AjoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/libAjoutTitle"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etReferenceArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/libAjoutEditRefArticle"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etDesignArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/libAjoutEditDesArticle"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etAjoutPrixArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/libAjoutEditPrixArticle"
            android:inputType="number"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etQteArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/libAjoutEditQteArticle"
            android:inputType="textPersonName|numberDecimal"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btAjoutArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/libAjoutButtonNexArticle"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:id="@+id/spaceArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btQuitArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/libAjoutButtonCancelArticle"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>